--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
                 <option value="3-5-2">3-5-2</option>
             </select>
         </div>
-        <button class="btn-primary">Log in to save</button>
-        <button class="btn-secondary">Download image</button>
-        <button class="btn-secondary">Create new</button>
+        <button class="btn-primary">Create new</button>
     </div>
 
     <div class="main-content">
@@ -33,8 +31,6 @@
         <div class="formation" id="formation"></div>
     </div>
     
-    
-
     <div id="playerModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
