Corriger la partie data inserer

--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
                 <input type="text" id="nameFilter" placeholder="Name">
                 <select id="positionFilter">
                     <option value="">Position</option>
-                    <option value="CF">Centre Forward</option>
-                    <option value="LWF">Left Wing Forward</option>
-                    <option value="RWF">Right Wing Forward</option>
+                    <option value="CF">CF</option>
+                    <option value="LWF">LWF</option>
+                    <option value="RWF">RWF</option>
+                    <option value="RWF">RWF</option>
                 </select>
                 <select id="nationalityFilter">
                     <option value="">Nationality</option>
