Styler l'icon + pour l'add

--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
                     <option value="CF">CF</option>
                     <option value="LWF">LWF</option>
                     <option value="RWF">RWF</option>
-                    <option value="RWF">RWF</option>
+                    <option value="GK">GK</option> 
+                    <option value="CB">CB</option>
+                    <option value="LB">LB</option> 
+                    <option value="CM">CM</option> 
+                    <option value="RB">RB</option> 
+                    <option value="LW">LW</option>
+                    <option value="RW">Rw</option>
+                    <option value="ST">ST</option>
                 </select>
                 <select id="nationalityFilter">
                     <option value="">Nationality</option>
