--- a/main.html
+++ b/main.html
@@ -168,6 +168,28 @@
     <div id="successMessage" style="display: none; position: fixed; top: 20px; left: 50%; transform: translateX(-50%); background-color: #4CAF50; color: white; padding: 15px; border-radius: 5px; z-index: 1000;">
         Player created successfully!
     </div>
+
+    <!-- Form -->
+     <!-- Exemple de formulaire pour modifier les informations du joueur -->
+<form id="modify-player-form">
+    <label for="player-name">Nom du joueur:</label>
+    <input type="text" id="player-name" name="name"><br><br>
+
+    <label for="player-position">Position:</label>
+    <input type="text" id="player-position" name="position"><br><br>
+
+    <label for="player-nationality">Nationalité:</label>
+    <input type="text" id="player-nationality" name="nationality"><br><br>
+
+    <label for="player-rating">Évaluation:</label>
+    <input type="number" id="player-rating" name="rating"><br><br>
+
+    <label for="player-speed">Vitesse:</label>
+    <input type="number" id="player-speed" name="speed"><br><br>
+
+    <button type="submit">Sauvegarder les modifications</button>
+</form>
+
     
     <script>
 
