--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
     <div id="successMessage" style="display: none; position: fixed; top: 20px; left: 50%; transform: translateX(-50%); background-color: #4CAF50; color: white; padding: 15px; border-radius: 5px; z-index: 1000;">
         Player created successfully!
     </div>
-  
+
+    <div id="fol"></div>
+<script src="script.js"></script>
 </body>
 </html>
