--- a/index.html
+++ b/index.html
@@ -158,6 +158,6 @@
 
     <div id="success-message" class="success-message">Joueur créé avec succès!</div>
 
-    <script src="as"></script>
+    <script src="assets/script/script.js"></script>
 </body>
 </html>
