--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@ button:active {
 }
 
 .player-card, .add-player-btn {
-    width: 140px;
-    height: 290px;
+    width: 160px;
+    height: 320px;
     background: var(--card-gradient);
     border: 1px solid var(--border-color);
     border-radius: 8px;
@@ -185,8 +185,8 @@ button:active {
 
 .player-rating {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 0px;
+    left: 2px;
     font-size: 24px;
     font-weight: bold;
     color: #f4d03f;
@@ -194,8 +194,8 @@ button:active {
 
 .player-position-label {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 5.8px;
+    right: 3px;
     font-size: 18px;
     font-weight: bold;
     color: #f4d03f;
@@ -209,14 +209,17 @@ button:active {
 }
 
 .player-flag {
-    top: 45px;
-    left: 10px;
+    position: relative;
+    /* top: 45px; */
+    bottom:0px;
+    right:50px;
     border-radius: 50%;
 }
 
 .player-logo {
-    top: 45px;
-    right: 10px;
+    position: relative;
+    bottom: 28px;
+    right: -50px;
     border-radius: 50%;
 }
 
